adjusted z-index of footer elements to fix link hover decor

--- a/styles/main.css
+++ b/styles/main.css
@@ -150,10 +150,12 @@ a:hover {
     width: 100%;
     justify-content: space-between;
     min-width: 400px;
+    z-index: 5;
 }
 
 #footer-left {
     display: flex;
+    z-index: 8;
 }
 
 .footer-links {
@@ -183,6 +185,7 @@ a:hover {
 #footer-right {
     display: flex;
     margin-right: 30px;
+    z-index: 8;
 }
 
 #leaf {
